[Sarath] Minor alignment fixes on booked room page

--- a/src/components/booked-room/booked-room.scss
+++ b/src/components/booked-room/booked-room.scss
@@ -18,14 +18,14 @@ booked-room {
 
   #roomName {
     color: #F8FCFF;
-    opacity: 0.75;
+    opacity: 0.6;
     text-align: center;
     padding-top: 5vmin;
-    font-size: 15vmin;
+    font-size: 8vmin;
   }
 
   timer {
-    margin: 0 auto;
+    margin: auto;
     width: 90vmin;
     height: 90vmin;
   }
