--- a/src/components/timer/timer.scss
+++ b/src/components/timer/timer.scss
@@ -10,48 +10,41 @@ timer {
   align-items: center;
   justify-content: center;
   overflow: hidden;
-  box-shadow: 0px 0px 63px -1px rgba(147,210,215,1);
-
+  box-shadow: 0px 0px 63px -1px rgba(147, 210, 215, 1);
   animation-name: bulbeffect;
   animation-duration: 3s;
   animation-iteration-count: infinite;
-
   font-family: 'Meslo LG L DZ for Powerline';
 
   #description {
-    #countdownTime {
-      color: white;
-      font-size: 15vmin;
-      width: 100%;
-    }
+    color: grey;
 
-    #booked-by,
-    #meeting-name {
-      display: block;
-      color: grey;
+    #countdownTime {
+      margin-top: 10vmin;
+      color: white;
+      font-size: 13vmin;
     }
 
     #booked-by {
-      font-size: 5vmin;
+      font-size: 3vmin;
     }
 
     #meeting-name {
-      font-size: 5vmin;
-      margin-top: 1em;
+      font-size: 4vmin;
     }
   }
 
   @keyframes bulbeffect {
-   0% {
-     box-shadow: 0px 0px 63px 0px rgba(147,210,215,1);
-   }
+    0% {
+      box-shadow: 0px 0px 63px 0px rgba(147, 210, 215, 1);
+    }
 
-   50% {
-     box-shadow: 0px 0px 63px 10px rgba(147,210,215,1);
-   }
+    50% {
+      box-shadow: 0px 0px 63px 10px rgba(147, 210, 215, 1);
+    }
 
-   100% {
-     box-shadow: 0px 0px 63px 0px rgba(147,210,215,1);
-   }
- }
+    100% {
+      box-shadow: 0px 0px 63px 0px rgba(147, 210, 215, 1);
+    }
+  }
 }
